# Azura

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
src-tauri/: Cargo.toml  tauri.conf.json
