[package]
name = "azura"
version = "0.1.0"
description = "A cross-platform music player featuring Rich Presence in Discord and Cyrkensia server repositories"
authors = ["Stridsvagn69420 (https://github.com/Stridsvagn69420)"]
license = "EUPL-1.2"
repository = "https://github.com/Stridsvagn69420/Azura"
default-run = "azura"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
